[package]
name = "share_home_server"
version = "0.1.0"
authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", default-features = false, features = ["serve"] }
multipart = "0.17.0"
dirs = "3.0.1"
chrono = "0.4"
pathdiff = "0.2.0"
itertools = "0.9"
